<resources>
    <string name="app_name">The Acme Coffee Experience</string>
    <string name="first_time_user">Welcome to the ACME Coffee experience!</string>

    <!--LogIn-->
    <string name="action_sign_in">Log In!</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="create_New_Account">Create New Account</string>
    <string name="app_logo">AppLogo</string>

    <!--SignUp-->
    <string name="signup">Sign Up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_nif">VAT number</string>
    <string name="about_you">About You</string>
    <string name="login_info">Login Information</string>
    <string name="prompt_card_number">Card Number</string>
    <string name="prompt_card_information">Payment Information</string>
    <string name="prompt_card_expiration">MM/YY</string>
    <string name="prompt_card_cvc">CVC</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="action_sign_up">Sign Up!</string>
    <string name="preferences_userName">userName</string>
    <string name="preferences_userUUID">userUUID</string>
    <string name="serverURL">http://192.168.1.9:3001</string>

    <!--MainMenu-->
    <string name="item_price">%.2f €</string>
    <string name="total_cart_items">%d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_cart">Your Cart</string>
    <string name="your_order">Your Order</string>

    <!--Vouchers-->
    <string name="free_item">Free Item</string>
    <string name="free_item_coffee">Coffee</string>
    <string name="discount">Discount</string>
    <string name="discount_5">5% Off</string>

    <!--Settings-->
    <string name="personal_data">Personal Information</string>
    <string name="credentials">Credentials</string>
    <string name="cart_price">€%.2f</string>
    <string name="total_text">Total</string>
    <string name="next">Place Order</string>
    <string name="add_voucher">Add Voucher</string>
    <string name="your_vouchers">Your Vouchers</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="see_menu">See Menu</string>
    <string name="coffee_voucher">Coffee Voucher</string>
    <string name="discount_voucher">Discount Voucher</string>
    <string name="proceed_to_counter">Please proceed to the counter of ACME Coffee Shop.</string>
    <string name="order_placed_success">Order has been successfully placed.</string>
    <string name="update_cart_value">Update Cart • €%.2f</string>
    <string name="save_changes">Save</string>

    <string name="order_text">Order</string>
    <string name="vouchers_text">Vouchers</string>
    <string name="information">Information</string>

</resources>