<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.profile.ProfileFragment">


    <data>
        <variable
            name="viewModel"
            type="com.feup.cmov.acme_client.screens.profile.ProfileViewModel" />

        <variable
            name="handler"
            type="com.feup.cmov.acme_client.screens.profile.ProfileHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/your_profile"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/aboutYouText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/about_you"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_face_black_18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="25"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:text="@{viewModel.user.name}"
                android:enabled="false"
                android:hint="@string/prompt_name"
                app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragment_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_call_black_18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:digits="0123456789+"
                android:maxLength="14"
                android:inputType="phone"
                android:text="@{viewModel.user.phone_number}"
                android:enabled="false"
                android:hint="@string/prompt_phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/cardInformationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_card_information"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nifInputSignup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragment_cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_payment_black_18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="01234 56789"
                android:inputType="phone"
                android:maxLength="19"
                android:maxLines="1"
                android:text="@{viewModel.user.card_number}"
                android:enabled="false"
                android:hint="@string/prompt_card_number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileFragment_cardExpiration"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_event_black_18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardExpiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="5"
                    android:inputType="phone"
                    android:digits="0123456789/"
                    android:maxLines="1"
                    android:text="@{viewModel.user.card_expiration}"
                    android:enabled="false"
                    android:hint="@string/prompt_card_expiration"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileFragment_cardCVC"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="10dp"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_lock_black_18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cardCVC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:text="@{viewModel.user.card_cvc}"
                    android:enabled="false"
                    android:hint="@string/prompt_card_cvc"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragment_nif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_nif_black_18dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="9"
                android:digits="0123456789"
                android:inputType="phone"
                android:text="@{viewModel.user.NIF}"
                android:enabled="false"
                android:hint="@string/prompt_nif"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</layout>